--- a/package.json
+++ b/package.json
@@ -31,18 +31,22 @@
     "copy-webpack-plugin": "^6.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.2",
+    "eslint": "^7.8.1",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.0",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "vue": "^2.6.12"
   }
 }
