--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.8.1",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.0",
     "sass": "^1.26.10",
