--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "axios": "^0.20.0",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.12"
   }
